# audio_server

./: .env.asr  .env.example  .env.qwen3tts  .env.tts  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: export-funasr-mlt.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AudioRecorder.vue  TranscriptionDisplay.vue
scripts/: benchmark_asr_rtf.py  benchmark_rtf.py  fix_vad.py  package-funasr-mlt.sh  test_client.py
src/asr_server/: __init__.py  asr_engine.py  config.py  main.py  session.py  vad.py
src/asr_server/static/: audio-playback.js
src/asr_server/static/assets/: index-CnZOeam1.js  index-CqNOPbya.css
src/audio_server/: __init__.py  asr_engine.py  audio_buffer.py  config.py  main.py  session.py  tts_engine.py  vad.py
src/audio_server/static/: audio-processor.js  index.html
