[project]
name = "audio-server"
version = "0.1.0"
description = "OpenAI-compatible streaming ASR service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sherpa-onnx>=1.12.0",
    "webrtcvad>=2.0.10",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "setuptools<70",
    "soundfile>=0.12.0",
    "requests>=2.28.0",
    "onnxruntime>=1.24.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
audio = [
    "pydub>=0.25.1",
]

[tool.uv]
package = true
