[project]
name = "audio-server"
version = "0.1.0"
description = "OpenAI-compatible streaming ASR service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "soundfile>=0.12.0",
    "requests>=2.28.0",
    "python-multipart>=0.0.9",
    "pydub>=0.25.1",
    "setuptools",
]

[project.optional-dependencies]
asr = [
    "sherpa-onnx>=1.12.0",
    "webrtcvad>=2.0.10",
]
tts-sherpa = [
    "sherpa-onnx>=1.12.0",
]
tts-qwen = [
    "qwen-tts>=0.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0",
]
all = [
    "sherpa-onnx>=1.12.0",
    "webrtcvad>=2.0.10",
    "qwen-tts>=0.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[tool.uv]
package = true
